# MechaCode

./: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  weather.json
.codex/rules/: architecture.md  code-language.md
.github/workflows/: windows-ci.yml
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  App.vue  main.ts  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  protocol_v1.rs  run_manager.rs
apps/desktop/src/components/: ErrorBoundary.tsx  MessageSkeleton.tsx  Skeleton.tsx
apps/desktop/src/hooks/: useAgentConfig.ts  useAgentRun.ts  useChatSelectors.ts  useKeyboardShortcuts.ts
docs/: README.md  implemented-features.md
docs/adr/: 0001-protocol-v1-schema-source.md  0002-runtime-sidecar-ipc-framing.md  0003-tool-broker-boundary.md  0004-windows-path-and-process-isolation.md  0005-local-data-credentials-logs.md
docs/architecture/: desktop.md
docs/design/: ui-style.md
docs/development/: code-language.md
docs/engineering/: toolchain-dist-contract.md  windows-ci.md
docs/plan/: 2026-07-06.md  2026-07-12-enterprise-roadmap.md  2026-07-12.md
docs/security/: data-map.md  phase-0-acceptance.md  phase-0-exit-gate.md  phase-2-lifecycle-fault-matrix.md  security-invariants.md  threat-model.md
scripts/: build-sidecar-manifest.mjs  check-env.mjs  check-workspace-imports.mjs  redact-ci-logs.mjs
(+22 files in other folders)
