[package]
name = "mecha_desktop"
version = "0.1.0"
description = "Mecha desktop app"
authors = ["Mecha"]
edition = "2021"

[lib]
name = "mecha_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
